src/app/modules/notifications/notifications-list/notifications-list.component.scss
:host {
  width: 100%;
  padding: 1em;
  display: flex;
  flex-direction: column;
}

.notifications-table {
  flex: 0 0 40%;

  .scroll-wrapper {
    overflow-x: hidden;
    overflow-y: auto;
  }
}

.mat-column-select {
  width: 4em;
}

.mat-column-created {
  width: 6em;
  padding: 0 0.1em;
}

.mat-cell:not(.no-data) {
  cursor: pointer;
}

.notification-body {
  flex-grow: 1;
  padding: 1em;
  display: flex;
  flex-direction: column;
}

.notification-selected-info {
  padding: 1em 0;
  display: flex;
  flex-direction: row;
  align-items: center;

  label {
    font-weight: bold;
    margin-right: 1em;
  }

  .notifications-action {
    display: flex;
    flex-direction: row;

    button {
      margin-left: 1em;

      span {
        margin-left: 0.5em;
      }
    }
  }
}

